--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -55,7 +55,7 @@
 		<tr>
 			<td></td>
 			<td class='ca_credit'>JQuery Foundation</td>
-			<td class='ca_credit'>JQuery Mobile</td>
+			<td class='ca_credit'>JQuery Mobile (excerpts)</td>
 		</tr>
 		<tr>
 			<td></td>
