Add in top performing apps.  Trending now is largest delta on trends

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1195,8 +1195,8 @@ function addWarning(text) {
 	<li class='startupButton caMenuItem' data-category='onlynew'>New Apps</li>
 	<li class='startupButton caMenuItem' data-category='new'>Updated Apps</li>
 	<li class='startupButton caMenuItem' data-category='random'>Random Apps</li>
+	<li class='startupButton caMenuItem' data-category='topperforming'>Top Performing</li>
 	<li class='startupButton caMenuItem' data-category='trending'>Trending Apps</li>
-	<li class='startupButton caMenuItem' data-category='upandcoming'>Up and Coming</li>
 </ul>
 <hr>
 <ul class='caMenu'>
