--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -192,7 +192,7 @@ $(function(){
 			confirmButtonText: 'I Understand'
 		}, function (isConfirm) {
 			if ( isConfirm ) {
-				$.post(URL,{action:'dismiss_warning'},function(data) {
+				post({action:'dismiss_warning'},function(data) {
 					if (data) {
 						location.reload();
 					}
@@ -245,7 +245,7 @@ function updateContent(button) {
 	if ( appFeedModeMsg ) {
 		myAlert("Updating Content",appFeedModeMsg,true,"40");
 	}
-	$.post(URL,{action:'force_update'}, function(data) {
+	post({action:'force_update'}, function(data) {
 		if (data) {
 			if ( $.cookie("plugininstallpending" || ! appFeedModeMsg ) ) {
 				var plugins = $.cookie("plugininstallpending");
@@ -259,7 +259,7 @@ function updateContent(button) {
 					getContent(true,'INITIALIZE',"","",startupScreen);
 				}
 			}
-			$.post(URL,{action:'get_categories'},function(data) {
+			post({action:'get_categories'},function(data) {
 				if (data) {
 					$("#category_list").html(data);
 				}
@@ -360,7 +360,7 @@ function changePage(pageNumber) {
 	var oldHeight = $(".ca_templatesDisplay").height();
 	$(".ca_templatesDisplay").css("height",oldHeight).html("");
 	hideSortIcons();
-	$.post(URL,{action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected},function(data3) {
+	post({action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected},function(data3) {
 		if (data3) {
 			updateDisplay(data3,directionIn);
 			$(".ca_templatesDisplay").css("height","auto");
@@ -453,7 +453,7 @@ function doSearch(button,newSearch) {
 	}
 	mySpinner();
 
-	$.post(URL,{action:'get_content',filter:filter,sortOrder:sortOrder},function(data) {
+	post({action:'get_content',filter:filter,sortOrder:sortOrder},function(data) {
 		if (data) {
 			enableButtons();
 			updateDisplay(data);
@@ -484,7 +484,7 @@ function changeSortOrder(button,buttonClass,previousApps) {
 			startup = "true";
 		}
 	});
-	$.post(URL,{action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected,startup:startup},function(data3) {
+	post({action:'display_content',sortOrder:sortOrder,pageNumber:pageNumber,selected:selected,startup:startup},function(data3) {
 		if (data3) {
 			updateDisplay(data3);
 		}
@@ -550,7 +550,7 @@ function getContent(init,category,description,newApp,startupDisplay) {
 
 		var sortOrder = getSortOrder();
 
-		$.post(URL,{action:'get_content',category:category,newApp:newApp,sortOrder:sortOrder,startupDisplay:startupDisplay},function(data) {
+		post({action:'get_content',category:category,newApp:newApp,sortOrder:sortOrder,startupDisplay:startupDisplay},function(data) {
 			if (data) {
 				updateDisplay(data);
 
@@ -564,7 +564,7 @@ function getContent(init,category,description,newApp,startupDisplay) {
 }
 
 function populateAutoComplete() {
-	$.post(URL,{action:'populateAutoComplete'},function(data) {
+	post({action:'populateAutoComplete'},function(data) {
 		if (data) {
 			searchBoxAwesomplete.list = JSON.parse(data);
 			searchBoxAwesomplete.maxItems = 20;
@@ -614,7 +614,7 @@ function dockerSearch(pageNumber) {
 	var sortOrder = getSortOrder();
 	mySpinner();
 	$("#templates_content").html("");
-	$.post(URL,{action:'search_dockerhub',filter:filter,page:pageNumber,sortOrder:sortOrder},function(data) {
+	post({action:'search_dockerhub',filter:filter,page:pageNumber,sortOrder:sortOrder},function(data) {
 		if (data) {
 			updateDisplay(data,directionIn);
 		}
@@ -623,7 +623,7 @@ function dockerSearch(pageNumber) {
 
 function dockerConvert(dockerID) {
 	mySpinner();
-	$.post(URL,{action:'convert_docker',ID:dockerID},function(data) {
+	post({action:'convert_docker',ID:dockerID},function(data) {
 		if (data) {
 			myCloseAlert();
 			templateURL = "/Apps/AddContainer?xmlTemplate=default:" + myTrim(data);
@@ -672,7 +672,7 @@ function previousApps(button,installed) {
 	$(".dockerSearch").hide();
 	enableIcon("#sortIcon",true);
 
-	$.post(URL,{action:'previous_apps',installed:installed},function(data) {
+	post({action:'previous_apps',installed:installed},function(data) {
 		if (data) {
 			if ( installed ) {
 				$(".multi_installDiv").hide();
@@ -700,7 +700,7 @@ function removeApp(application, humanName) {
 		html: true
 	}, function(isConfirm) {
 		if (isConfirm) {
-			$.post(URL,{action:'remove_application',application:application}, function(data) {
+			post({action:'remove_application',application:application}, function(data) {
 				if (data) {
 					enableSearch();
 					previousApps("OldApps",false);
@@ -732,7 +732,7 @@ function uninstallApp(application,humanName) {
 		}, function(isConfirm) {
 			if (isConfirm) {
 				myAlert("","Uninstalling "+humanName);
-				$.post(URL,{action:'uninstall_application',application:application}, function(data) {
+				post({action:'uninstall_application',application:application}, function(data) {
 					if (data) {
 						previousApps("InstalledApps",true);
 						enableSearch();
@@ -764,7 +764,7 @@ function deletePrivateApp(path,name,author) {
 		if ( isConfirm ) {
 			swal("Removing "+name,"","info");
 			getSelectedApps();
-			$.post(URL,{action:'removePrivateApp',path:path},function(data) {
+			post({action:'removePrivateApp',path:path},function(data) {
 				if (data) {
 					myCloseAlert();
 					refreshDisplay();
@@ -798,7 +798,7 @@ function uninstallDocker(application,humanName) {
 	}, function( isConfirm ) {
 		if ( isConfirm ) {
 			myAlert("","Uninstalling "+humanName);
-			$.post(URL,{action:'uninstall_docker',application:application},function(data) {
+			post({action:'uninstall_docker',application:application},function(data) {
 				if (data) {
 					enableSearch();
 					previousApps("InstalledApps",true);
@@ -835,7 +835,7 @@ function installPLGupdate(filename,plgName) {
 }
 function checkPLGupdate() {
 	var filename = $("#sortorder").attr("data-plgfilename");
-	$.post(URL,{action:'updatePLGstatus',filename:filename},function(data) {
+	post({action:'updatePLGstatus',filename:filename},function(data) {
 		if (data) {
 			var pageNumber = data.currentpage;
 			changePage(pageNumber);
@@ -847,7 +847,7 @@ function pinApp(button,repository) {
 	$(button).toggleClass("pinned unpinned");
 	var pinned = ( $(button).hasClass("unpinned") ) ? "Click to pin this application" : "Click to unpin this application";
 	$(button).tooltipster('content',pinned);
-	$.post(URL,{action:'pinApp',repository:repository});
+	post({action:'pinApp',repository:repository});
 }
 
 function setPageOne() {
@@ -866,7 +866,7 @@ function pinnedApps(button) {
 	clearCategory();
 	$(".dockerSearch,.multi_installDiv").hide();
 	enableIcon("#sortIcon",true);
-	$.post(URL,{action:'pinnedApps'},function(data) {
+	post({action:'pinnedApps'},function(data) {
 		if (data) {
 			refreshDisplay();
 			myCloseAlert();
@@ -875,7 +875,7 @@ function pinnedApps(button) {
 }
 
 function displayTags(leadTemplate) {
-	$.post(URL,{action:'displayTags',leadTemplate:leadTemplate},function(data) {
+	post({action:'displayTags',leadTemplate:leadTemplate},function(data) {
 		if (data) {
 			sweetAlertBackground("white");
 			disableSearch();
@@ -1121,7 +1121,7 @@ function isTouch() {
 function showCredits() {
 	$(".multi_installDiv,.dockerSearch").hide();
 	clearCategory(); clearSearchBox();
-	$.post(URL,{action:'showCredits'},function(data) {
+	post({action:'showCredits'},function(data) {
 		if (data) {
 			updateDisplay(data);
 		}
@@ -1133,7 +1133,7 @@ function showStatistics() {
 	clearCategory(); clearSearchBox();
 	updateDisplay("");
 	mySpinner();
-	$.post(URL,{action:'statistics'},function(data) {
+	post({action:'statistics'},function(data) {
 		if (data) {
 			updateDisplay(data);
 		}
@@ -1143,7 +1143,7 @@ function showStatistics() {
 function caChangeLog() {
 	$(".multi_installDiv,.dockerSearch").hide();
 	clearCategory(); clearSearchBox();
-	$.post(URL,{action:'caChangeLog'},function(data) {
+	post({action:'caChangeLog'},function(data) {
 		if (data) {
 			updateDisplay(data);
 		}
@@ -1162,6 +1162,19 @@ function addWarning(text) {
 	$('.caNotice').show();
 }
 
+function post(options,callback) {
+	if ( typeof options === "function" ) {
+		callback = options;
+	}
+	console.log(JSON.stringify(options));
+	if ( typeof callback === "function" ) {
+		$.post(URL,options,function(data){
+			eval(callback(data));
+		});
+	} else {
+		$.post(URL,options);
+	}
+}
 </script>
 
 > <i class='fa fa-sort enabledIcon' aria-hidden='true' style='font-size:2rem;'></i> - This chooses how to display the results<br><br>
