Only show spinner if post call takes longer than 100ms

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1157,17 +1157,22 @@ function addWarning(text) {
 function post(options,callback) {
 	if ( typeof options === "function" ) {
 		callback = options;
+	} else {
+		console.log(JSON.stringify(options));
 	}
-	console.log(JSON.stringify(options));
-	mySpinner();
+	var spinner = setTimeout(function(){
+		mySpinner();
+	},100);
 	if ( typeof callback === "function" ) {
 		$.post(URL,options,function(data){
 			console.log(data);
 			eval(callback(data));
+			clearTimeout(spinner);
 			$("div.spinner").hide();
 		});
 	} else {
 		$.post(URL,options);
+		clearTimeout(spinner);
 		$("div.spinner").hide();
 	}
 }
